# compare_workdir_MESA

./: .gitignore  README.md  README.org  compare_all_work_dir_inlists.py  compare_inlists.py  merge_column_lists.py  pyproject.toml  setup.cfg
src/: __init__.py  compare_all_work_dir_inlists.py  compare_inlists.py  merge_column_lists.py
src/compare_inlists/: compare_all_work_dir_inlists.py  compare_inlists.py
src/compare_workdir/: __init__.py  compare_all_work_dir_inlists.py  compare_all_workdir_inlists.py  compare_inlists.py  merge_column_lists.py
