[metadata]
name = compare_inlists-math
version = 0.0.1
author = Mathieu Renzo
author_email = mrenzo@flatironinstitute.org
description = Compare MESA inlists without worrying about order and comments
long_description = file: README.org
long_description_content_type = text/org-mode
url = https://github.com/mathren/compare_workdir_MESA
project_urls =
    Bug Tracker = https://github.com/mathren/compare_workdir_MESA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3+
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src