[metadata]
name = compare_inlist-mathren
version = 0.0.1
author = Mathieu Renzo
author_email = mrenzo@flatironinstitute.org
description = Compare MESA inlists without worrying about comments or order
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mathren/compare_workdir_MESA
project_urls =
    Bug Tracker = https://github.com/mathren/compare_workdir_MESA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
      termcolor
      click

[options.entry_points]
console_scripts =
	compare_inlists = compare_inlist:main
	compare_all_work_dir_inlists = compare_all_work_dir_inlists:main
	merge_column_lists = merge_column_lists:main

[options.packages.find]
where = src
exclude = tests